--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,14 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-query": "^5.79.0",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.30.1",
+    "tailwind-merge": "^3.3.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
