--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,18 +19,23 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.16.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.30.1",
+    "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@testing-library/react": "^16.3.0",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^22.15.24",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
